# quill-tui

./: Cargo.toml  test.md
quill-cli/: Cargo.toml
quill-cli/src/: io.rs  main.rs  ui.rs
quill-core/: Cargo.toml
quill-core/src/: app.rs  cursor.rs  export.rs  lib.rs
quill-core/src/model/: annotation.rs  document.rs  mod.rs
quill-web/: Cargo.toml  index.html
quill-web/src/: io.rs  lib.rs  terminal.rs  ui.rs
reports/: code-review-2026-02-03.md
scripts/compound/: prd.json  progress.txt
src/: app.rs  main.rs  ui.rs
src/actions/: mod.rs  navigation.rs
src/io/: export.rs  load.rs  mod.rs
src/model/: document.rs  text_range.rs
tasks/: prd-cleanup-dead-code.md
