[package]
name = "quill-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal-based annotation tool for text documents"
authors = ["Samuel Zoloth"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tui-textarea = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
