[workspace]
resolver = "2"
members = ["quill-core", "quill-cli", "quill-web"]

# WASM optimization profiles (apply to all workspace members)
[profile.release]
opt-level = "z"
lto = true

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Samuel Zoloth"]

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# TUI dependencies (CLI only)
ratatui = "0.28"
crossterm = "0.28"

# WASM dependencies
ratzilla = "0.3"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
