[package]
name = "quill-cli"
description = "Terminal-based annotation tool for text documents"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "quill"
path = "src/main.rs"

[dependencies]
quill-core = { path = "../quill-core" }
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
serde_json.workspace = true
dirs = "5.0"
