[package]
name = "quill-core"
description = "Core library for Quill text annotation tool"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
